--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "6a33bbb2-5771-429f-9da6-062b309f52ab",
    "metadata": {
     "id": "6a33bbb2-5771-429f-9da6-062b309f52ab"
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "0eff3cca-cc1b-4901-a0ad-461fdce263b1",
    "metadata": {
     "id": "0eff3cca-cc1b-4901-a0ad-461fdce263b1"
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "93f6313d-d495-4853-9091-ab706623a737",
    "metadata": {
     "id": "93f6313d-d495-4853-9091-ab706623a737"
@@ -404,7 +404,7 @@
        "[10 rows x 24 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "d0b66d99-fe75-4699-93c0-d091a97c3180",
    "metadata": {
     "id": "d0b66d99-fe75-4699-93c0-d091a97c3180"
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "fa8274d1-53de-4013-89d6-203203d06ce0",
    "metadata": {
     "id": "fa8274d1-53de-4013-89d6-203203d06ce0"
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "dc994aa1-a1b1-4114-a65a-502e89b77358",
    "metadata": {
     "id": "dc994aa1-a1b1-4114-a65a-502e89b77358"
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "59d363e4-a691-4c18-8170-9d487f34485b",
    "metadata": {
     "id": "59d363e4-a691-4c18-8170-9d487f34485b"
@@ -724,7 +724,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "1b88f365-e29e-4cbb-ab86-0575c91ba97b",
    "metadata": {
     "id": "1b88f365-e29e-4cbb-ab86-0575c91ba97b"
@@ -810,7 +810,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "dc3adda9-f707-4b1c-97f3-b7a0c65dc42d",
    "metadata": {
     "id": "dc3adda9-f707-4b1c-97f3-b7a0c65dc42d"
@@ -1233,7 +1233,7 @@
        "[3000 rows x 41 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "55738db5-3209-47fb-9f85-6150d4241687",
    "metadata": {
     "id": "55738db5-3209-47fb-9f85-6150d4241687"
@@ -1576,7 +1576,7 @@
        "[8 rows x 40 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1587,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "035c8438-17f5-4077-a411-c5a91a2bec20",
    "metadata": {
     "id": "035c8438-17f5-4077-a411-c5a91a2bec20"
@@ -1637,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "7a4df88c-e025-46d0-a50f-c229485c2bb2",
    "metadata": {
     "id": "7a4df88c-e025-46d0-a50f-c229485c2bb2"
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "14ebc596-c6ac-440e-a98e-5300206f79d2",
    "metadata": {
     "id": "14ebc596-c6ac-440e-a98e-5300206f79d2"
@@ -1871,7 +1871,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1902,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "41ff8064-230d-47ec-bbab-99dd9149b99d",
    "metadata": {
     "colab": {
@@ -2962,9 +2962,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0f016d42-5c5e-41b5-9889-39a5e459059a",
+   "metadata": {},
+   "source": [
+    "# Appendix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40741561-3adb-4180-8643-47b3ef4138c0",
+   "metadata": {},
+   "source": [
+    "We can also have a look to accuracy even if in our case it's not the most relevant metric, but often considered a more intuitive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1d3cbbb4-61c9-4c7f-92dd-9bf62435aacc",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'drop'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      4\u001b[39m chromosome = [\u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m]\n\u001b[32m      6\u001b[39m cols_to_drop = [i \u001b[38;5;28;01mfor\u001b[39;00m i, gene \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(chromosome) \u001b[38;5;28;01mif\u001b[39;00m gene == \u001b[32m0\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m X_train2 = \u001b[43mX_train\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdrop\u001b[49m(X_train.columns[cols_to_drop], axis=\u001b[32m1\u001b[39m)\n\u001b[32m      9\u001b[39m X_test2  = X_test.drop(X_test.columns[cols_to_drop], axis=\u001b[32m1\u001b[39m)\n\u001b[32m     11\u001b[39m forest = RandomForestClassifier(n_estimators=\u001b[32m100\u001b[39m, random_state=\u001b[32m42\u001b[39m)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'numpy.ndarray' object has no attribute 'drop'"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "chromosome = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 0, 0]\n",
+    "\n",
+    "cols_to_drop = [i for i, gene in enumerate(chromosome) if gene == 0]\n",
+    "\n",
+    "X_train2 = X_train.drop(X_train.columns[cols_to_drop], axis=1)\n",
+    "X_test2  = X_test.drop(X_test.columns[cols_to_drop], axis=1)\n",
+    "\n",
+    "forest = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "forest.fit(X_train2, y_train)\n",
+    "y_pred = forest.predict(X_test2)\n",
+    "\n",
+    "acc = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Accuracy: {acc:.4f}\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11495a7f-2a73-4594-a382-4f3e663ab3e4",
+   "id": "e9bebbf4-ef41-4c9e-862c-6d36ddc9d5c6",
    "metadata": {},
    "outputs": [],
    "source": []
